latest payara require new JVM options and restart